feat: добавлен метод get api/v1/user/:id
