# docs/swagger.json
@@ -51,7 +51,44 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/v1.getUsersResponseData"
+                                            "$ref": "#/definitions/v1.usersResponseData"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/users/:id": {
+            "get": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Получение пользователя по id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Id пользователя",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/http.ResponseSuccess"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.userResponseData"
                                         }
                                     }
                                 }
@@ -90,7 +127,15 @@
                 }
             }
         },
-        "v1.getUsersResponseData": {
+        "v1.userResponseData": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/model.User"
+                }
+            }
+        },
+        "v1.usersResponseData": {
             "type": "object",
             "properties": {
                 "users": {
